--- a/views/options.handlebars
+++ b/views/options.handlebars
@@ -20,6 +20,13 @@
             background-color: #373535;
             color: #fff;
         }
+        .options {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center
+        }
     </style>
 </head>
 <body>
