--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,6 +30,7 @@ form {
     padding: 20px;
     border-radius: 8px;
     color: black;
+    background-color: #fff;
 }
 button {
     display: block;
